--- a/BookshopAngular/angular.json
+++ b/BookshopAngular/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "EmployeeCrudAngular": {
+    "BookshopAngular": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/employee-crud-angular",
+            "outputPath": "dist/bookshop-angular",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
@@ -59,10 +59,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "EmployeeCrudAngular:build:production"
+              "buildTarget": "BookshopAngular:build:production"
             },
             "development": {
-              "buildTarget": "EmployeeCrudAngular:build:development"
+              "buildTarget": "BookshopAngular:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -70,7 +70,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "EmployeeCrudAngular:build"
+            "buildTarget": "BookshopAngular:build"
           }
         },
         "test": {
